--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_SERVER_URL="https://nest-template-todo.onrender.com"
+# VITE_SERVER_URL="https://nest-template-todo.onrender.com"
+VITE_SERVER_URL="http://10.0.0.16:3000"
